Hide Adopt a Kitty button and update contact page heading

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
   
   <button id="darkModeToggle" class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
   
-  <h1>Contact Us - Zack's Kitty Site</h1>
+  <h1>Contact Us at Zack's Accidental Kitty Haven</h1>
   
-  <p>Have questions about Zack's kitty? Want to learn more about cat care? Reach out to us using the form below!</p>
+  <p>Have questions about Zack's kitties? Want to learn more about adopting a cat from Zack? Reach out to us using the form below!</p>
   
   <form action="https://formspree.io/f/your-id" method="POST">
     <div class="form-group">
