--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   <button id="darkModeToggle" class="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
 
   <h1>Welcome to Zack's Accidental Kitty Haven</h1>
-  <p>A beautiful website dedicated to Zack's amazing kitties! </p>
-  <p class="indent">Showcase your feline friend's unique personality. </p>
+  <p>A website dedicated to Zack's amazing kitties! </p>
+  <p class="indent">Please help our feline friend's find their forever home. </p>
   <p class="double-indent">Share their stories and adventures.</p>
   
   <!-- Zack: This is your custom banner image -->
   
   <nav style="text-align: center;">
-    <a href="about.html">About Zack's Havens</a> |
-    <a href="name.html">Cat Names</a> |
+    <a href="about.html">About Zack's Haven</a> |
+    <a href="name.html">The Kitties</a> |
     <a href="contact.html">Contact</a>
   </nav>
 <br>
-<h2><center>Cat Stories</center></h2>
+<h2><center>Cat's Available for Adoption</center></h2>
 <br>
 <div class="story-container">
   <div class="story-box">
-    <img src="images/zack-kitty-site-banner.png" alt="Zack's kitty being cozy" class="story-preview">
+    <img src="images/buncha-kitties-pexels-ezz7-979503.jpg" alt="Zack's kitty being cozy" class="story-preview">
     <h3><a href="story.html">Zack's Kitty Story</a></h3>
   </div>
 </div>
@@ -63,7 +63,7 @@
   </div>
   
   <!-- Adopt a Cat Button -->
-  <div class="button-wrapper">
+  <div class="button-wrapper" style="display: none;">
     <button id="adoptCatButton" class="interactive-button">
       <img src="images/pinkcatpaw4walking.png" alt="Adopt a Cat" class="button-image">
     </button>
