--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zack's Accidental Kitty Haven</title>
-  <link rel="icon" type="image/png" href="images/tab—Pngtree—adorable smiling pink cat face_18241534.png">
+  <link rel="icon" type="image/png" href="images/cathead718485.png">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
