Update button images to zack-kitty-feet-1459485_1280.png

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- Paw Print Button -->
   <div class="button-wrapper">
     <button id="pawTestButton" class="interactive-button">
-      <img src="images/pinkcatpaw4walking.png" alt="Paw Print" class="button-image">
+      <img src="images/zack-kitty-feet-1459485_1280.png" alt="Paw Print" class="button-image">
     </button>
     <p class="button-label">Paw Prints</p>
   </div>
@@ -49,7 +49,7 @@
   <!-- Fortune Cat Button -->
   <div class="button-wrapper">
     <button id="fortuneCatButton" class="interactive-button">
-      <img src="images/MallaHelper.png" alt="Fortune Cat" class="button-image">
+      <img src="images/zack-kitty-feet-1459485_1280.png" alt="Fortune Cat" class="button-image">
     </button>
     <p class="button-label">Fortune Cat</p>
   </div>
@@ -57,7 +57,7 @@
   <!-- Meow Button -->
   <div class="button-wrapper">
     <button id="meowButton" class="interactive-button">
-      <img src="images/pinkcatpaw4walking.png" alt="Meow" class="button-image">
+      <img src="images/zack-kitty-feet-1459485_1280.png" alt="Meow" class="button-image">
     </button>
     <p class="button-label">Meow</p>
   </div>
@@ -65,7 +65,7 @@
   <!-- Adopt a Cat Button -->
   <div class="button-wrapper" style="display: none;">
     <button id="adoptCatButton" class="interactive-button">
-      <img src="images/pinkcatpaw4walking.png" alt="Adopt a Cat" class="button-image">
+      <img src="images/zack-kitty-feet-1459485_1280.png" alt="Adopt a Cat" class="button-image">
     </button>
     <p class="button-label">Adopt a Kitty</p>
   </div>
